--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1 class="mb-0">Ketan
           <span class="text-primary">Tiwari</span>
         </h1>
-        <div class="subheading mb-5">Indore · <span class="text-primary">India</span> · 453112 · +919589006272 ·
+        <div class="subheading mb-5">Indore · <span class="text-primary">India</span> · +91-9589006272 ·
           <a href="mailto:ketantiwari@live.in">ketantiwari@live.in</a>
         </div>
         <p class="mb-3">An accomplished Software Engineer with over a decade of experience, I bring a wealth of
